doc/k8s/ea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ea
  labels:
    app: ea
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ea
      version: v1
  template:
    metadata:
      annotations: 'cni.projectcalico.org/ipv4pools': "[\"office-net\"]"
      labels:
        app: ea
        version: v1
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
        - name: gianthub-registry-key
      containers:
        - name: ea
          image: docker-registry.ztgame.com.cn/im/mediasoup-signal:1.0.1
          args: ["--erizoAgent"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
           - name: licode-data
             mountPath: /opt/licode/licode_config.js
             subPath: licode_config.js
      volumes:
        - name: licode-data
          configMap:
            name: licode-config
