doc/k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
    #   annotations: 'cni.projectcalico.org/ipv4pools': "[\"office-net\"]"
      labels:
        app: grafana
    spec:
      containers:
        - image: grafana/grafana
          imagePullPolicy: IfNotPresent
          name: grafana
          ports:
            - containerPort: 3000
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/grafana
            name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30

      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: grafana
