doc/k8s/prome-alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
    #   annotations: 
    #     'cni.projectcalico.org/ipv4pools': "[\"office-net\"]"
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 9094
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
           - name: alertmanager-config
             mountPath: /etc/alertmanager/alertmanager.yml
             subPath: alertmanager.yml
      volumes:
        - name:  alertmanager-config
          configMap:
            name:  alertmanager-config
