doc/k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
      version: v1
  template:
    metadata:
      annotations: 
        'cni.projectcalico.org/ipv4pools': "[\"office-net\"]"
      labels:
        app: rabbitmq
        version: v1
    spec:
      imagePullSecrets:
        - name: gianthub-registry-key
      containers:
        - name: rabbitmq
          image: docker-registry.ztgame.com.cn/im/mediasoup-signal:1.0.2
          args: ["--rabbitmq"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 15672
            name: manager
          - containerPort: 5672
            name: broker
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
