doc/k8s/rov.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rov
  labels:
    app: rov
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rov
      version: v1
  template:
    metadata:
      annotations: 
        'cni.projectcalico.org/ipv4pools': "[\"office-net\"]"
      labels:
        app: rov
        version: v1
    spec:
      imagePullSecrets:
        - name: gianthub-registry-key
      containers:
        - name: rov
          image: docker-registry.ztgame.com.cn/im/mediasoup-signal:1.0.2
          args: ["--ROV"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3005
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
           - name: licode-data
             mountPath: /opt/mediasoup-signal/licode_config.js
             subPath: licode_config.js
      volumes:
        - name: licode-data
          configMap:
            name: licode-config
