doc/k8s/es-cluster-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    elastic-app: elasticsearch-cluster-service
  name: elasticsearch-cluster-service
  namespace: skyapm
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    elastic-app: elasticsearch
  type: ClusterIP
status:
  loadBalancer: {}
