doc/k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
