doc/k8s/nuve-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuve-cluster-service
  name: nuve-cluster-service
spec:
  ports:
  - name: grpc-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nuve
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
