doc/k8s/nuve-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuve
  name: nuve
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: grpc-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nuve
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
