doc/k8s/prome-alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alertmanager
  name: alertmanager
spec:
  ports:
  - name: http-port
    port: 9094
    protocol: TCP
    targetPort: 9094
  selector:
    app: alertmanager
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
