doc/k8s/rabbitmqadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: mqadmin
spec:
  ports:
  - name: http
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
