doc/k8s/rov-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rov-cluster-service
  name: rov-cluster-service
spec:
  ports:
  - name: http-port
    port: 3005
    protocol: TCP
    targetPort: 3005
  selector:
    app: rov
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
