doc/k8s/skyapm-oap-node-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    component: oap
  name: skyapm-oup-nodeport-service
spec:
  ports:
    - port: 11800
      protocol: TCP
      targetPort: 11800
  selector:
    component: oap
  type: NodePort
